@@ -1,0 +1,2 @@
+eclipse.preferences.version=1
+workspaceProjectRegexAlias//.*/(de\\.tototec\\.sbuild.*)-.*\\.jar=$1
