@@ -5,21 +5,54 @@ import java.io.File
 object TargetRefs {
 
   def apply(targetRefs: TargetRefs): TargetRefs = targetRefs
+  def apply(targetRefs: TargetRef*): TargetRefs = new TargetRefs(Seq(targetRefs))
 
   implicit def fromString(string: String)(implicit project: Project): TargetRefs = TargetRefs(TargetRef(string))
-  implicit def fromFile(file: File)(implicit project: Project): TargetRefs = TargetRefs(TargetRef("file:" + file.getPath))
+  implicit def fromFile(file: File)(implicit project: Project): TargetRefs = TargetRefs(TargetRef(file))
   implicit def fromTargetRef(targetRef: TargetRef): TargetRefs = TargetRefs(targetRef)
   implicit def fromTarget(target: Target): TargetRefs = TargetRefs(TargetRef(target.name)(target.project))
   implicit def fromSeq(targetRefs: Seq[TargetRef]): TargetRefs = TargetRefs(targetRefs: _*)
 }
 
-case class TargetRefs(val targetRefs: TargetRef*) {
-  def ~(targetRefs: TargetRefs): TargetRefs = TargetRefs((this.targetRefs ++ targetRefs.targetRefs): _*)
-  def ~(targetRef: TargetRef): TargetRefs = TargetRefs((targetRefs ++ Seq(targetRef)): _*)
-  def ~(file: File)(implicit project: Project): TargetRefs = TargetRefs((targetRefs ++ Seq(TargetRef(file))): _*)
-  def ~(string: String)(implicit project: Project): TargetRefs = TargetRefs((targetRefs ++ Seq(TargetRef(string))): _*)
+class TargetRefs private (val targetRefGroups: Seq[Seq[TargetRef]]) {
 
-  override def toString: String = targetRefs.map { _.name }.mkString(" ~ ")
+  lazy val targetRefs = targetRefGroups.flatten
+
+  private[this] def isMulti: Boolean = targetRefGroups.size > 1
+
+  private[this] def closedGroups: Seq[Seq[TargetRef]] = targetRefGroups.size match {
+    case 1 => Seq()
+    case n => targetRefGroups.take(n - 1)
+  }
+
+  private[this] def openGroup: Seq[TargetRef] = targetRefGroups.last
+
+  private[this] def removeEmptyGroups(groups: Seq[Seq[TargetRef]]): Seq[Seq[TargetRef]] = groups.filter(!_.isEmpty)
+
+  def ~(targetRefs: TargetRefs): TargetRefs =
+    new TargetRefs(removeEmptyGroups(
+      closedGroups ++
+        Seq(openGroup ++ targetRefs.targetRefGroups.head) ++
+        targetRefs.targetRefGroups.tail
+    ))
+  def ~(targetRef: TargetRef): TargetRefs = this.~(TargetRefs.fromTargetRef(targetRef))
+  def ~(file: File)(implicit project: Project): TargetRefs = this.~(TargetRefs.fromFile(file))
+  def ~(string: String)(implicit project: Project): TargetRefs = this.~(TargetRefs.fromString(string))
+  def ~(target: Target): TargetRefs = this.~(TargetRefs.fromTarget(target))
+
+  // since SBuild 0.5.0.9004
+  def ~~(targetRefs: TargetRefs): TargetRefs =
+    new TargetRefs(removeEmptyGroups(
+      targetRefGroups ++
+        Seq(targetRefs.targetRefGroups.head) ++
+        targetRefs.targetRefGroups.tail
+    ))
+  def ~~(targetRef: TargetRef): TargetRefs = ~~(TargetRefs.fromTargetRef(targetRef))
+  def ~~(file: File)(implicit project: Project): TargetRefs = ~~(TargetRefs.fromFile(file))
+  def ~~(string: String)(implicit project: Project): TargetRefs = ~~(TargetRefs.fromString(string))
+  def ~~(target: Target): TargetRefs = ~~(TargetRefs.fromTarget(target))
+
+  override def toString: String = targetRefGroups.map { _.map(_.name).mkString(" ~ ") }.mkString(" ~~ ")
 
   /**
    * Get the files, this TargetRefs is referencing or producing, if any.
@@ -44,7 +77,5 @@ case class TargetRefs(val targetRefs: TargetRef*) {
     }
   }
 
-
-  
 }
 
